[editor SearchPanel] Prevent content jumping as scrollbar appears/disappears.

--- a/app/src/editor/shared/components/SearchPanel/SearchPanel.pcss
+++ b/app/src/editor/shared/components/SearchPanel/SearchPanel.pcss
@@ -117,7 +117,7 @@
 .SearchPanel .ContentContainer {
   border-top: 1px solid #EFEFEF;
   transform: translateY(1px);
-  overflow: auto;
+  overflow: overlay; /* deprecated, but does what we want */
 
   /* standards compliant but only firefox implements */
   scrollbar-width: thin; /* stylelint-disable-line property-no-unknown */
